wp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wp-deployment-3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wp-3
    spec:
      containers:
      - name: web
        image: etcr460/wordpress/wordpress
        ports:
        - containerPort: 80
      - name: secret-volume
        secret:
          secretName: sqlcreds

      - name: cloudsql
        emptyDir:

        - image: gcr.io/cloudsql-docker/gce-proxy:1.06
          volumeMounts:
          - name: cloudsql
            mountPath: /cloudsql
          - name: secret-volume
            mountPath: /secret/
          command: ["/cloud_sql_proxy", "-dir=/cloudsql", "-credential_file=/secret/cr460-1-5e728f045a46.json", "-instances=cr460-1:us-east1-b:db"]
